--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.28.0",
