--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -31,7 +33,8 @@
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.28.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vitepress": "^0.7.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
