config：karma conf

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name xingorg1 ./packages/index.js && vue-cli-service build --xingorg1 --no-clean",
     "test:unit": "vue-cli-service test:unit",
+    "test:ui": "karma start",
     "lint": "vue-cli-service lint",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs"
@@ -31,7 +32,15 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "karma": "^5.2.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.2",
     "lint-staged": "^9.5.0",
+    "mocha": "^8.2.0",
     "prettier": "^1.19.1",
     "sass": "^1.28.0",
     "sass-loader": "^8.0.2",
