--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "xingorg1-ui",
-  "version": "1.0.1-0",
+  "name": "axe-ui",
+  "version": "0.1.0",
   "description": "A Component Library for Vue3.js.",
-  "main": "./dist/xingorg1.umd.min.js",
+  "main": "./dist/axe.umd.min.js",
   "files": [
     "dist",
     "packages",
@@ -14,7 +14,7 @@
     "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dist": "vue-cli-service build --target lib --name xingorg1 ./packages/index.js && vue-cli-service build --xingorg1 --no-clean",
+    "dist": "vue-cli-service build --target lib --name axe ./packages/index.js && vue-cli-service build --axe --no-clean",
     "test:unit": "vue-cli-service test:unit",
     "test:ui": "karma start",
     "lint": "vue-cli-service lint",
@@ -24,19 +24,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xingorg1/xingorg1-ui.git"
+    "url": "git+https://github.com/DFE-evernote/axe-ui.git"
   },
   "unpkg": "lib/index.js",
   "homepage": "",
   "keywords": [
-    "xingorg1",
+    "axe",
     "vue3",
     "components"
   ],
-  "author": "guojufeng",
+  "author": "axe",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/xingorg1/xingorg1-ui/issues"
+    "url": "https://github.com/DFE-evernote/axe-ui/issues"
   },
   "dependencies": {
     "core-js": "^3.6.5",
