--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "type": "git",
     "url": "git+https://github.com/DFE-evernote/axe-ui.git"
   },
-  "unpkg": "lib/index.js",
+  "unpkg": "dist/axe.umd.js",
   "homepage": "",
   "keywords": [
     "axe",
