--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
+    "file-save": "^0.2.0",
     "html-webpack-plugin": "^4.5.0",
     "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
@@ -70,6 +71,7 @@
     "sass": "^1.28.0",
     "sass-loader": "^8.0.2",
     "select-version-cli": "0.0.2",
+    "uppercamelcase": "^3.0.0",
     "vitepress": "^0.7.1"
   },
   "gitHooks": {
