--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-vue": "^7.1.0",
     "file-save": "^0.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "json-templater": "^1.2.0",
     "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
