--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "vue-cli-service lint",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "pub": "node build/git-release.sh && node build/release.sh"
+    "pub": "sh build/git-release.sh && sh build/release.sh"
   },
   "repository": {
     "type": "git",
