--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "pub": "sh build/git-release.sh && sh build/release.sh",
-    "commit": "git-cz"
+    "commit": "git add . && git-cz && git push"
   },
   "repository": {
     "type": "git",
