--- a/package.json
+++ b/package.json
@@ -41,29 +41,29 @@
     "url": "https://github.com/DFE-evernote/axe-ui/issues"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.2"
+    "core-js": "^3.15.2",
+    "vue": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.8",
-    "@vue/cli-plugin-eslint": "^4.5.8",
-    "@vue/cli-plugin-unit-mocha": "^4.5.8",
-    "@vue/cli-service": "^4.5.8",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-unit-mocha": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.3",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^2.0.0-beta.7",
+    "@vue/test-utils": "^2.0.0-rc.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "chai": "^4.2.0",
-    "chalk": "^4.1.0",
-    "commitizen": "^4.2.2",
+    "chai": "^4.3.4",
+    "chalk": "^4.1.1",
+    "commitizen": "^4.2.4",
     "conventional-changelog": "^3.1.24",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^7.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.12.1",
     "file-save": "^0.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^4.5.2",
     "json-templater": "^1.2.0",
     "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
@@ -73,9 +73,9 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.2",
     "lint-staged": "^9.5.0",
-    "mocha": "^8.2.0",
+    "mocha": "^8.4.0",
     "prettier": "^1.19.1",
-    "sass": "^1.28.0",
+    "sass": "^1.35.1",
     "sass-loader": "^8.0.2",
     "select-version-cli": "0.0.2",
     "uppercamelcase": "^3.0.0",
